Tue Aug  5 18:40:55 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* version.rc: New file containing the version resource information
		for MIT releases of the Krb5 software.

Fri Apr 28 11:21:01 1995 Keith Vetter (keithv@fusion.com)

	* makefile: added gss, new subdirectory for gss demo.

Wed Apr 19 18:37:07 1995 Keith Vetter (keithv@fusion.com)

	* readme: updated about how to make it, and about gssapi.

Wed Apr 5 16:14:49 1995 Keith Vetter (keithv@fusion.com)

	* readme: updated about realms, conf files and telnet port.

Tue Mar 28 12:00:00  1995 Keith Vetter (keithv@fusion.com)

	* ChangeLog renamed to changelo to avoid having to always rename it.

Mon Mar 27 23:34:58 1995 Keith Vetter (keithv@fusion.com)

	* makefile: fixed typo on the cd command

Mon Mar 27 20:34:58 1995 Keith Vetter (keithv@fusion.com)

	* makefile: makes recursively in wintel directory
        * readme: updated for wintel program.

Thu Mar 23 14:00:00 1995 Keith Vetter (keithv@fusion.com)

	* readme: updated to reflect name change of zipping target.

Wed Mar 22 15:01:33 1995 Keith Vetter (keithv@fusion.com)

	* readme: how-to create Windows version of kerberos 5