@@ -1,0 +1,8 @@
+mkdir kbin
+copy lib\*.dll kbin
+copy windows\cns\krb5.exe kbin
+copy windows\wintel\telnet.exe kbin
+copy windows\gss\gss.exe kbin
+copy clients\klist\klist.exe kbin
+copy clients\kinit\kinit.exe kbin 
+copy clients\kdestroy\kdestroy.exe kbin
